# lora-trainer

./: .env.example  .gitignore  README.md  fake_dataset.py  infer.py  pyproject.toml  train.py
slurm/: infer.sh  train.sh
